--- a/style/styles.css
+++ b/style/styles.css
@@ -7,3 +7,17 @@
     padding:19px 29px;
     border: none;
 }
+.banner-legal{
+    background-image: url("../images/banner.png");
+    background-repeat: no-repeat;
+    background-size:auto;
+    /* padding:200px 360px; */
+}
+.btn-legal-2{
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    background-color:#B68C5A ;
+    border-radius: 8px;
+    padding:7px 25px;
+    border: none;}
