--- a/style/styles.css
+++ b/style/styles.css
@@ -10,7 +10,7 @@
 .banner-legal{
     background-image: url("../images/banner.png");
     background-repeat: no-repeat;
-    background-size:auto;
+    background-size:cover;
     /* padding:200px 360px; */
 }
 .btn-legal-2{
@@ -21,6 +21,15 @@
     border-radius: 8px;
     padding:7px 25px;
     border: none;}
+
+.btn-legal-3{
+        color: white;
+        font-size: 18px;
+        font-weight: 600;
+        background-color:#B68C5A ;
+        border-radius: 8px;
+        padding:10px 15px;
+        border: none;}
 
 .legal-img-1{
     background-image: url("../images/slider-1.jpg");
